Fixes display of products page on small screens

--- a/src/components/header.module.css
+++ b/src/components/header.module.css
@@ -152,6 +152,11 @@ body:global(.light-mode) .headerLogo {
 	filter: invert(50%);
 }
 
+.shoppingCartHeader {
+	margin-bottom: 8px;
+	font-size: 16px;
+}
+
 .shoppingCartContainer {
 	position: relative;
 }
